[package]
name = "shape-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
password_validator = {git = "https://github.com/BurritoBandit28/password_validator.git"}
crossterm = "0.27.0"
rand = "0.8.5"
shuffle = "0.1.7"
chrono = "0.4.31"